packages/cashc/test/compiler/ParseError/invalid_iso_date.cash
pragma radiantscript ^0.1.0;

contract Test() {
    return {
        test() {
            int d = date("02-16-2021 05:30:00 PM");
            require(d == 0);
        }
    }
}
